<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:id="@+id/activity_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.twismart.barcafansclub.Activities.WelcomeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:text="@string/welcome_text_welcome" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:adjustViewBounds="true"
            android:src="@mipmap/ic_launcher"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/welcome_sign_up"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:onClick="signUp"
            android:background="@drawable/btn_background"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:text="@string/welcome_log_in"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:onClick="logIn"
            android:background="@drawable/btn_background"/>


    </LinearLayout>
</ScrollView>