<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.twismart.barcafansclub.Activities.RegisterActivity">

        <!--soonly
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="155dp">

            <ImageView
                android:id="@+id/myImgCover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:scaleType="centerCrop"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="42dp"
                android:src="@drawable/add_photo" />

        </FrameLayout>
        -->

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <com.twismart.barcafansclub.Adapters.CircleImageView
                android:id="@+id/myImgProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:src="@drawable/profile"/>

            <ImageView
                android:id="@+id/myImgProfileCamara"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="22dp"
                android:src="@drawable/add_photo" />

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:textColor="#fff"
                android:hint="@string/register_name"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="55"
                android:textColor="#fff"
                android:hint="@string/register_email"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#fff">

            <EditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="25"
                android:textColor="#fff"
                android:hint="@string/register_password"/>

        </android.support.design.widget.TextInputLayout>


        <Spinner
            android:id="@+id/registerLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent" />


        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/welcome_sign_up"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:background="@drawable/btn_background"/>

        <TextView
            android:id="@+id/textPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:textColor="#fff"
            android:text="@string/register.text.acceptpolicy" />


    </LinearLayout>
</ScrollView>