<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/listPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapse_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginStart="95dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/userImgCover"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <Button
                android:id="@+id/buttonAction"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:background="@drawable/button_border"
                android:visibility="gone"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_collapseMode="parallax"
                android:layout_gravity="end"
                android:layout_marginTop="188dp"
                android:layout_marginRight="8dp"
                android:text="@string/user_profile_button_follow"/>


            <com.twismart.barcafansclub.Adapters.CircleImageView
                android:id="@+id/userImgSmall"
                android:layout_width="92dp"
                android:layout_height="92dp"
                android:layout_marginTop="155dp"
                app:layout_collapseMode="parallax"
                android:padding="6dp"
                android:adjustViewBounds="true"
                android:src="@drawable/profile"/>

            <LinearLayout
                android:id="@+id/layoutTextMuted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:layout_collapseMode="parallax"
                android:visibility="gone"
                android:layout_marginTop="250dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="13sp"
                    android:text="@string/user_profile_text_user_muted"/>

                <TextView
                    android:id="@+id/textUnmute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/colorAccent"
                    android:paddingLeft="4dp"
                    android:text="@string/user_profile_text_user_unmute"/>

            </LinearLayout>



            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


</android.support.design.widget.CoordinatorLayout>